[gd_scene load_steps=7 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/EnemyTank.gd" type="Script" id=2]
[ext_resource path="res://bullets/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=4]
[ext_resource path="res://ui/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.5783, 36.5314 )

[node name="EnemyTank" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
max_speed = 150
gun_cooldown = 0.5
max_health = 50
turret_speed = 1.0
detect_radius = 400

[node name="Body" parent="." index="0"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 268, 186, 80, 76 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource( 1 )

[node name="Turret" parent="." index="2"]
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_enabled = true
region_rect = Rect2( 371, 14, 60, 24 )

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 55, 0 )

[node name="Flash" parent="Turret" index="1"]
position = Vector2( 55, 0 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_rect = Rect2( 644, 94, 50, 40 )

[node name="DetectArea" type="Area2D" parent="." index="4"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea" index="0"]

[node name="LookAhead1" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 5 )]

[node name="Explosion" parent="." index="9"]
visible = false
scale = Vector2( 0.75, 0.75 )
[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
